--- a/config.yml
+++ b/config.yml
@@ -5,5 +5,5 @@ servers:
       port: 7777
     - hostname: localhost
       port: 8888
-    - hostname: localhost
+    - hostname: 127.0.0.1
       port: 9999
