--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,9 @@
 proxyhost : localhost
 proxyport : 6060
 servers:
-    - hostname: losthost
+    - hostname: localhost
       port: 7777
     - hostname: localhost
       port: 8888
-    - hostname: 127.0.0.1
+    - hostname: localhost
       port: 9999
